# fiat

./: .gitignore  README.md  start_universe.sh
GameClient/: Cargo.toml
GameClient/src/: live_editor_ui.rs  main.rs
GameServer/: hub.go  main.go  physics.go  registry.go
MathCompiler/: ast_firewall.py  main.py
MathCompiler/core/compiler/: type_checker.py
MathCompiler/core/runtime/: validation.py
asset/base_skeletons/: humanoid.json
client/: Cargo.toml
client/src/: app.rs  main.rs  network.rs  renderer.rs  shader.wgsl
client/src/animation/: blend.rs  ik.rs  mod.rs  playback.rs  retarget_client.rs
client/src/core/: ecs.rs  math.rs  mod.rs  scene.rs  skeleton.rs  validation.rs
client/src/render/: camera.rs  export.rs  gizmo.rs  mesh.rs  mod.rs  pbr.wgsl  scene.rs  skin.rs  skin.wgsl  static_mesh.wgsl  static_renderer.rs
client/src/render/shaders/: skin.wgsl
client/src/ui/: chat_panel.rs  editor.rs  generation_status.rs  mod.rs  prompt_panel.rs  style.rs  templates.rs  toolbar.rs
client/src/ui/panels/: chat_panel.rs  mod.rs
compiler/: api.py  requirements.txt
compiler/core/: errors.py  jobs.py  scene_manager.py
compiler/core/analysis/: complexity.py
compiler/core/animation/: math.py  motion.py  retarget.py  skeleton.py  validation.py
compiler/core/executors/: editor.py  material.py  mesh.py  motion.py  primitive.py  skeleton.py  texture.py
compiler/core/llm/: __init__.py  prompt.py  router.py
compiler/core/ml/: model_registry.py  pose_interpolation.py  rigging.py  (+3 more)
compiler/templates/: wgsl_module.py
server/: go.mod  go.sum
(+5 files in other folders)
