[package]
name = "fiat"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.10"
wgpu = "0.19.4"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4"] }
